Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23000

Ensure we get a warning from THD::drop_temporary_table() in case of disk errors

    XMLWordPrintable

Details

    Description

      The call stack for DROP TEMPORARY TABLE is:

      THD::drop_temporary_table()
      mysql_rm_table_no_locks()
      free_tmp_table_share()
      THD::free_tmp_table_share()
      THD::rm_temporary_table()
      ha_delete_table()

      The problem is that free_temp_table_share() is a void function and thus the caller doesn't know if ha_delete_table() failed or not.

      How to repeat:
      in gdb, put a breakpoint at: maria_delete_table()
      Execute in command tool:
      create temporary table t1 (a int) engine=aria;
      drop temporary table t1;

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              monty Michael Widenius
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0.75d
                  0.75d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h Time Not Required
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.