MDEV-23000:Ensure we get a warning from THD::drop_temporary_table() in case of disk errors